--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,4 +1,4 @@
-<ion-header [translucent]="true">
+<ion-header class="ion-no-border">
     <ion-toolbar>
         <ion-title>
             Pendientes
@@ -7,5 +7,7 @@
 </ion-header>
 
 <ion-content>
+
+    <h1>Hola mundo</h1>
 
 </ion-content>
