--- a/src/app/pages/tab1/tab1.page.html
+++ b/src/app/pages/tab1/tab1.page.html
@@ -1,5 +1,5 @@
 <ion-header class="ion-no-border">
-    <ion-toolbar>
+    <ion-toolbar color="success">
         <ion-title>
             Pendientes
         </ion-title>
@@ -8,6 +8,10 @@
 
 <ion-content>
 
-    <h1>Hola mundo</h1>
+    <ion-list>
+        <ion-item *ngFor="let lista of deseosService.listas" detail>
+            <ion-label>{{ lista.titulo }}</ion-label>
+        </ion-item>
+    </ion-list>
 
 </ion-content>
