--- a/src/app/pages/agregar/agregar.page.html
+++ b/src/app/pages/agregar/agregar.page.html
@@ -1,11 +1,33 @@
-<ion-header>
-    <ion-toolbar>
-        <ion-title>Agregar lista</ion-title>
+<ion-header class="ion-no-border">
+    <ion-toolbar color="success">
+
+        <ion-buttons slot="start">
+            <ion-back-button color="tertiary" defaultHref="/"></ion-back-button>
+        </ion-buttons>
+
+        <ion-title>Nombre de la lista</ion-title>
     </ion-toolbar>
 </ion-header>
 
-<ion-content padding>
+<ion-content>
 
-    <h1>Agregar lista</h1>
+    <ion-list>
+        <ion-item>
+            <ion-label position="floating">Nuevo item</ion-label>
+            <ion-input value="text"></ion-input>
+        </ion-item>
+    </ion-list>
+
+    <ion-list>
+
+        <ion-list-header>
+            <ion-label>Tareas por hacer</ion-label>
+        </ion-list-header>
+        <ion-item>
+            <ion-checkbox slot="start" color="tertiary"></ion-checkbox>
+            <ion-label>Recordar comer hoy</ion-label>
+        </ion-item>
+    </ion-list>
+
 
 </ion-content>
